plot more cases